--- a/mystats.html
+++ b/mystats.html
@@ -14,5 +14,34 @@
 <h4>Dhum Biryani</h4>
 <p>I likE dhum Biryani because it is made of chicken and it tastes spicy and very tasty with native spices food.</p>
 <img src="chicken-biryani-recipe.jpg" alt="photo of my favourate food" width="400" height="400">
+<hr>
+<p>Fitness is not about being better than someone else; it's about being better than you used to be</p>
+<table>
+    <tr>
+      <th>Sport</th>
+      <th>Reason to Recommend</th>
+      <th>Weekly Hours</th>
+    </tr>
+    <tr>
+      <td>Batminten</td>
+      <td>Recommend badminton for its versatility, physical fitness benefits, and low injury risk, making it an enjoyable and accessible sport for all ages.</td>
+      <td>17-20 hours</td>
+    </tr>
+    <tr>
+      <td>Cricket</td>
+      <td>Cricket promotes fitness through running, agility, and hand-eye coordination, enhancing cardiovascular health and overall physical well-being.</td>
+      <td>10-12 hours</td>
+    </tr>
+    <tr>
+      <td>Volleyball</td>
+      <td>Volleyball provides health and fitness benefits by improving cardiovascular endurance, muscular strength, agility, and promoting teamwork and social interaction.</td>
+      <td>6-8 hours</td>
+    </tr>
+    <tr>
+        <td>Basketball</td>
+        <td>Basketball provides good health and fitness to body and improves immunity and for fast moment</td>
+        <td>5-7 hours</td>
+    </tr>
+  </table>
 </body>
 </html>
