--- a/mystats.html
+++ b/mystats.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<style>
+    table,
+    th,
+    td {
+        border: 1px solid;
+    }
+</style>
 <head>
 <title>mystats</title>
 </head>
